added new endpoint for getting free slots
